syntax = "proto3";
option go_package = "/peer";

message User {
    uint32 Type = 1;
    uint64 Balance = 2;
    string Username = 3;
    bytes PassHash = 4;
	bytes Pubkey = 5;
}